--- a/styles/style.css
+++ b/styles/style.css
@@ -1202,7 +1202,7 @@ h6 {
 }
 
 .prev-next.prev {
-	background: url("../images/prev.png") no-repeat center;
+	background: url("../images/prev.svg") no-repeat center;
 	z-index: 12;
 }
 
@@ -1211,7 +1211,7 @@ h6 {
 		left: 14px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/left375.png") no-repeat center;
+		background: url("../images/left375.svg") no-repeat center;
 	}
 }
 
@@ -1220,7 +1220,7 @@ h6 {
 		left: 14px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/left375.png") no-repeat center;
+		background: url("../images/left375.svg") no-repeat center;
 	}
 }
 
@@ -1229,13 +1229,13 @@ h6 {
 		left: 14px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/left375.png") no-repeat center;
+		background: url("../images/left375.svg") no-repeat center;
 	}
 }
 
 .prev-next.next {
 	left: 39%;
-	background: url("../images/next.png") no-repeat center;
+	background: url("../images/next.svg") no-repeat center;
 	z-index: 12;
 }
 
@@ -1244,7 +1244,7 @@ h6 {
 		left: 510px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/right375.png") no-repeat center;
+		background: url("../images/right375.svg") no-repeat center;
 	}
 }
 
@@ -1253,7 +1253,7 @@ h6 {
 		left: 510px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/right375.png") no-repeat center;
+		background: url("../images/right375.svg") no-repeat center;
 	}
 }
 
@@ -1262,7 +1262,7 @@ h6 {
 		left: 460px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/right375.png") no-repeat center;
+		background: url("../images/right375.svg") no-repeat center;
 	}
 }
 
@@ -1271,7 +1271,7 @@ h6 {
 		left: 257px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/right375.png") no-repeat center;
+		background: url("../images/right375.svg") no-repeat center;
 	}
 }
 
@@ -1280,7 +1280,7 @@ h6 {
 		left: 257px;
 		position: absolute;
 		top: -130px;
-		background: url("../images/right375.png") no-repeat center;
+		background: url("../images/right375.svg") no-repeat center;
 	}
 }
 
@@ -1400,7 +1400,7 @@ h6 {
 /* стили декоративных изображений*/
 .title-repeat__img {
 	margin: 0 5px;
-	background: url("../images/camera.png");
+	background: url("../images/camera.svg");
 	min-width: 33px;
 	height: 28px;
 }
@@ -1506,7 +1506,7 @@ h6 {
 	width: 21px;
 	height: 25px;
 	transform: translate(33px, 30px);
-	background: url("../images/play.png") no-repeat center;
+	background: url("../images/play.svg") no-repeat center;
 	background-size: cover;
 }
 
@@ -1787,6 +1787,7 @@ h6 {
 		text-align: center;
 		padding: 15px 144.5px;
 		position: absolute;
+
 		top: 95%;
 		left: 30%;
 		width: 340px;
@@ -1829,8 +1830,8 @@ h6 {
 		flex-direction: column;
 		padding: 15px 144.5px;
 		position: absolute;
-		top: 95%;
-		left: 5%;
+		top: 100%;
+		left: 10%;
 		width: 340px;
 		height: 51px;
 		font-family: "Nunito Sans";
@@ -1880,8 +1881,9 @@ h6 {
 	.checkbox {
 		position: absolute;
 		color: white;
-		left: 15%;
-		top: 85%;
+		transform: translate(90%);
+		margin: 0 auto;
+		top: 88%;
 	}
 }
 
@@ -1889,6 +1891,7 @@ h6 {
 	.checkbox {
 		position: absolute;
 		color: white;
+		transform: translate(0%);
 		left: 30%;
 		top: 90%;
 	}
@@ -2471,7 +2474,7 @@ ol li:nth-child(-n + 9):before {
 /* стили закругления блока с декоративным изображением секции call-the-measurer */
 .call-the-measurer__round-1-img {
 	transform: translate(45%, 50%);
-	background: url("../images/pig.png");
+	background: url("../images/pig.svg");
 	width: 40px;
 	height: 33px;
 }
@@ -3006,7 +3009,7 @@ li.we-relize__li:hover {
 
 .our-clients__img {
 	margin: 0 5px;
-	background: url("../images/hands.png");
+	background: url("../images/hands.svg");
 	background-size: cover;
 	min-width: 33px;
 	height: 28px;
@@ -3121,7 +3124,7 @@ li.we-relize__li:hover {
 
 /* стили изображения для блока с информацией о площади*/
 .img-area-1 {
-	background: url("../images/area.png");
+	background: url("../images/area.svg");
 	background-size: cover;
 	width: 32px;
 	height: 31px;
@@ -3614,7 +3617,7 @@ li.we-relize__li:hover {
 /* изображение почты */
 .round-mail {
 	transform: translate(45%, 50%);
-	background: url("../images/mail.png");
+	background: url("../images/mail.svg");
 	background-repeat: no-repeat;
 	width: 15px;
 	height: 13px;
@@ -3624,7 +3627,7 @@ li.we-relize__li:hover {
 /* изображение инстаграма */
 .round-insta {
 	transform: translate(45%, 40%);
-	background: url("../images/insta.png");
+	background: url("../images/insta.svg");
 	background-repeat: no-repeat;
 	width: 15px;
 	height: 15px;
